# ITMO-ML-Services

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
md-files/: concept.md  development-rules.md
migrations/: env.py  script.py.mako
migrations/versions/: 20250506_initial_schema.py  20250508155458_add_is_admin_to_users.py  20250510_add_ml_models_tables.py  20250513_add_description_to_transactions.py  20250515_error_message.py  20250610_enhance_task_model.py
ml_service/controller/: control.py
ml_service/models/: tfidf_vectorizer.pkl
models/eb0ec7a7-3d06-4f69-9c9c-29c1d49a0682/e6b19f34-037b-4ae0-9288-b9637aa3ed2b/: model.joblib
src/ml_classifier/: __init__.py  main.py  tasks.py
src/ml_classifier/config/: security.py
src/ml_classifier/controller/: __init__.py  admin_model_controller.py  admin_user_controller.py  async_controller.py  auth_controller.py  billing_controller.py  classification_controller.py  control.py  prediction_controller.py  (+3 more)
streamlit/: Dockerfile  app.py  requirements.txt
streamlit/pages/: admin.py  admin_models.py  admin_stats.py  admin_users.py  admin_versions.py  balance.py  batch.py  classify.py  history.py  login.py
streamlit/utils/: api.py  auth.py  config.py
tests/: __init__.py  conftest.py
tests/integration/: test_admin_api.py  test_auth_api.py  test_profile_api.py
tests/unit/: test_admin_user_use_case.py  test_authorization.py  test_security.py  test_user_repository.py  test_user_use_cases.py
(+74 files in other folders)
