[tool.poetry]
name = "ml-classifier"
version = "0.1.0"
description = "ML service for classifying student reviews"
authors = ["ITMO Team"]
readme = "README.md"
packages = [{include = "ml_classifier", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
pydantic = "^2.11.4"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.10"
redis = "^6.0.0"
celery = "^5.5.2"
python-dotenv = "^1.1.0"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
loguru = "^0.7.3"
nltk = "^3.9.1"
pymorphy3 = "^2.0.3"
scikit-learn = "^1.6.1"
joblib = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.15.0"
pytest-cov = "^6.1.1"
pre-commit = "^4.2.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
